# TabFormerLite

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
configs/example/data_encoding/: config_card_dataset_encoding.json
configs/example/finetuning/: config_card_finetuning.json
configs/example/inference/: config_card_dataset_inference.json
configs/example/pretraining/: config_card_dataset_size_300.json
docs/: README.md
scripts/: encode_dataset.py  finetuning.py  inference_main.py  run_mlm_pretraining.py
tabformerlite/dataset/: datacollator.py  dataset.py  vocab.py
tabformerlite/inference/: encode_data.py  export_downstream_data.py  extract_embeddings.py  load_data.py  load_model.py  pooling.py
tabformerlite/misc/: get_configuration.py  tools_for_data_encoding.py  training_helpers.py
tabformerlite/models/: custom_criterion.py  hierarchical.py  modules.py  tabformer_bert.py
tests/: test_library.ipynb  test_training_pipeline.py
tests/test_configs/: test_dataset_encoding.json  test_inference_config.json  test_pretraining_config.json
tests/test_data/: test_data.csv
tutorial/: tutorial.ipynb
